# nfa-equivalence-code

./: .gitignore  .hindent.yaml  .stylish-haskell.yaml  .travis.yml  Makefile  NfaExperiments.cabal  README.md  stack.yaml
app/: DfaChecking.hs  Main.hs  NfaChecking.hs  RegexFullDerivation.hs
app-automata-equivalence/: DfaChecking.hs  Main.hs  NfaChecking.hs  Util.hs
app-benchmark/: AutomataOutput.hs  Interpolator.hs  Main.hs  RandomNfa.hs
app-regex-derivation/: Main.hs  RegexDerivation.hs  RegexEquivalence.hs  RegexFullDerivation.hs  Types.hs
app-regex-derivation/RegexDfaOutput/: Html.hs  LaTeX.hs  Tsv.hs
cl-automata/: circle.yml  cl-automata.cabal  stack.yaml
cl-automata-output/: LICENSE  cl-automata-output.cabal
cl-automata-output/src/Data/Dfa/Format/: Hknt.hs  Html.hs
cl-automata-output/src/Data/FiniteAutomaton/Format/: DotGraph.hs
cl-automata-tool/: cl-automata-tool.cabal  stack.yaml
cl-automata-tool/app/: DfaChecking.hs  Main.hs  NfaChecking.hs
cl-automata-tool/app-automata-equivalence/: Main.hs  NfaChecking.hs
cl-automata-tool/app-automata-output/: Main.hs
cl-automata-tool/src/: Common.hs
cl-automata/app-regex-derivation/: Types.hs
cl-automata/src/Algorithm/: AutomataMerge.hs  DfaEquivalence.hs
cl-automata/src/Compiler/: Hknt.hs
cl-automata/src/Data/: Dfa.hs  EpsilonNfa.hs  FiniteAutomaton.hs  Nfa.hs
cl-automata/src/Data/CongruenceClosure/: Internal.hs
cl-automata/src/Data/Dfa/: Builder.hs  Internal.hs
cl-automata/src/Language/: RegexParser.hs
cl-automata/src/Language/RegexParser/: Tokeniser.hs
cl-automata/test/: HkntSamples.hs
cl-automata/test/Algorithm/: AutomataMergeSpec.hs  DfaEquivalenceSpec.hs  NfaEquivalenceSpec.hs
cl-automata/test/Algorithm/Regex/: DerivationSpec.hs
cl-automata/test/Compiler/: HkntSpec.hs
cl-automata/test/Data/: DfaSpec.hs  EpsilonNfaSpec.hs  EquivalenceSpec.hs  NfaSpec.hs
cl-automata/test/Data/Dfa/: BuilderTest.hs  Test.hs
cl-automata/test/Data/EpsilonNfa/: InternalSpec.hs
cl-automata/test/Data/Nfa/: Test.hs
cl-automata/test/Language/Automata/: HkntParserSpec.hs
cl-automata/test/Language/Automata/HkntParser/: InternalSpec.hs  TokeniserSpec.hs
cl-automata/website/: Dockerfile  Main.hs
cl-automata/website/Actions/: FiniteAutomataEquivalence.hs
cl-benchmark/: cl-benchmark.cabal
cl-benchmark/app/: Interpolator.hs  Main.hs
cl-data-structures/: .doctest.json  cl-data-structures.cabal  stack.yaml
cl-data-structures/src/Data/: Queue.hs
cl-data-structures/test/: DoctestDriver.hs
cl-data-structures/test/Data/: CongruenceClosureSpec.hs  EquivalenceSpec.hs  QueueTest.hs
cl-regex-tool/: .hlint.yaml  cl-regex-tool.cabal  stack.yaml
cl-regex-tool/app/: Main.hs  RegexDerivation.hs  RegexEquivalence.hs  RegexFullDerivation.hs  Types.hs
cl-regex-tool/app-regex-derivation/: Main.hs  RegexEquivalence.hs  RegexFullDerivation.hs
cl-regex-tool/app-regex-output/: Main.hs
cl-regex-tool/app/RegexDfaOutput/: Html.hs  LaTeX.hs  Tsv.hs
cl-regexes/: cl-regexes.cabal  stack.yaml
cl-regexes/src/Algorithm/Regex/: Derivation.hs  DfaConversion.hs  Equivalence.hs
cl-regexes/src/Algorithm/Regex/DfaConversion/: Internal.hs
cl-regexes/src/Compiler/: Regex.hs
cl-regexes/src/Data/: Regex.hs
cl-regexes/src/Data/Dfa/Format/: Html.hs
cl-regexes/src/Data/Regex/: Formats.hs
cl-regexes/src/Language/RegexParser/: Internal.hs
cl-regexes/test/: CommonInstances.hs
cl-regexes/test/Algorithm/Regex/: DerivationSpec.hs  EquivalenceSpec.hs
cl-regexes/test/Compiler/: RegexSpec.hs
cl-regexes/test/Data/Regex/: InstancesTest.hs
cl-regexes/test/Language/: RegexParserSpec.hs
cl-regexes/test/Language/RegexParser/: InternalSpec.hs  TokeniserSpec.hs
cl-webservice/: cl-webservice.cabal  stack.yaml
cl-webservice/src/Actions/: Derivation.hs  FiniteAutomataEquivalence.hs  RegexEquivalence.hs  RegexToDfaConversion.hs
cl-website-tool/: .hindent.yaml  cl-website-tool.cabal  stack.yaml
cl-website-tool/app/: DataFiles.hs  Main.hs
cl-website-tool/static/: dom_utilities.js  form_data_polyfill.js  input_addon.js
doc/: Makefile  report.tex
src/Algorithm/: AutomataEquivalence.hs  AutomataMerge.hs  DfaEquivalence.hs  HkntToDfa.hs  NfaEquivalence.hs  RegexCompiler.hs
src/Algorithm/Regex/: Derivation.hs  DfaConversion.hs  Equivalence.hs
src/Compiler/: Hknt.hs  Regex.hs
src/Data/: CongruenceClosure.hs  Dfa.hs  EpsilonNfa.hs  EquivalenceRelation.hs  FiniteAutomaton.hs  Nfa.hs  Queue.hs  Regex.hs
src/Data/CongruenceClosure/: Internal.hs
src/Data/Dfa/: Regex.hs
src/Data/Dfa/Format/: Hknt.hs  Html.hs
src/Data/EpsilonNfa/: Internal.hs
src/Data/Nfa/: Internal.hs
src/Data/Regex/: Format.hs  Formats.hs
src/Language/: RegexParser.hs
src/Language/Automata/: HkntParser.hs
src/Language/Automata/HkntParser/: Class.hs  Internal.hs  Tokeniser.hs
src/Language/RegexParser/: Class.hs  Internal.hs  Tokeniser.hs
test/: DfaSpec.hs  HkntSamples.hs  NfaSpec.hs  RegexCompilerSpec.hs
test/Algorithm/: AutomataEquivalenceSpec.hs  AutomataMergeSpec.hs  DfaEquivalenceSpec.hs  HkntToDfaSpec.hs  NfaEquivalenceSpec.hs  RegexCompilerSpec.hs
test/Algorithm/Regex/: DerivationSpec.hs
test/Compiler/: HkntSpec.hs  RegexSpec.hs
test/Data/: CongruenceClosureSpec.hs  DfaSpec.hs  EpsilonNfaSpec.hs  EquivalenceSpec.hs  NfaSpec.hs
test/Data/EpsilonNfa/: InternalSpec.hs
test/Data/Nfa/: InternalSpec.hs
test/Language/: RegexParserSpec.hs
test/Language/Automata/: HkntParserSpec.hs
test/Language/Automata/HkntParser/: InternalSpec.hs  TokeniserSpec.hs
test/Language/RegexParser/: InternalSpec.hs  TokeniserSpec.hs
test/Nfa/: InternalSpec.hs
website/: Main.hs  RegexHandlers.hs
website/Actions/: Derivation.hs  FiniteAutomataEquivalence.hs  RegexEquivalence.hs  RegexToDfaConversion.hs
website/RegexDfaOutput/: Html.hs
website/static/: ajax_form_utilities.js  dom_utilities.js  form_data_polyfill.js  index.html  layout.css  styles.css
