name:                cl-automata-tool
version:             2.0.0.0
synopsis:            A collection of more or less efficient algorithms for simplifying finite automata and proving their equivalence.
description:         Please see README.md
homepage:            https://github.com/koflerdavid/nfa-equivalence-code#readme
license:             BSD3
license-file:        LICENSE
author:              David Kofler
maintainer:          D.Kofler@student.uibk.ac.at
copyright:           2016 David Kofler
category:            Algorithms
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.22

executable automata-equivalence
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall

  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       DfaChecking
                     , NfaChecking

  build-depends:       base
                     , bimap
                     , containers
                     , cl-automata
                     , optparse-generic
                     , text
                     -- For the Control.Monad.Trans.Except module
                     , transformers >= 0.4


source-repository head
  type:     git
  location: https://github.com/koflerdavid/nfa-equivalence-code
