name:                cl-automata
version:             2.0.0.0
synopsis:            A collection of more or less efficient algorithms for simplifying finite automata and proving their equivalence.
description:         Please see README.md
homepage:            https://github.com/koflerdavid/nfa-equivalence-code#readme
license:             BSD3
license-file:        LICENSE
author:              David Kofler
maintainer:          D.Kofler@student.uibk.ac.at
copyright:           2016 David Kofler
category:            Algorithms
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.22

library
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

  hs-source-dirs:      src
  exposed-modules:     Algorithm.AutomataMerge
                     , Algorithm.DfaEquivalence
                     , Algorithm.NfaEquivalence
                     , Algorithm.Regex.Derivation
                     , Algorithm.Regex.Equivalence
                     , Compiler.Hknt
                     , Compiler.Regex
                     , Data.Dfa
                     , Data.Dfa.Format.Hknt
                     , Data.Dfa.Format.Html
                     , Data.Dfa.Regex
                     , Data.EpsilonNfa
                     , Data.EpsilonNfa.Internal
                     , Data.FiniteAutomaton
                     , Data.Nfa
                     , Data.Queue
                     , Data.Regex
                     , Data.Regex.Formats
                     , Algorithm.Regex.DfaConversion
                     , Data.CongruenceClosure
                     , Data.CongruenceClosure.Internal
                     , Language.Automata.HkntParser
                     , Language.Automata.HkntParser.Class
                     , Language.Automata.HkntParser.Internal
                     , Language.Automata.HkntParser.Tokeniser
                     , Language.RegexParser
                     , Language.RegexParser.Class
                     , Language.RegexParser.Internal
                     , Language.RegexParser.Tokeniser

  build-depends:       base >= 4.7 && < 5
                     , bimap
                     -- For Data.Map.!?
                     , containers >= 0.5.9.1
                     , equivalence
                     , lucid
                     , parsec >= 3 && < 4
                     , text
                     , transformers

executable benchmark
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -Wall

  hs-source-dirs:      app-benchmark
  main-is:             Main.hs
  other-modules:       AutomataOutput
                     , Interpolator
                     , RandomNfa

  build-depends:       base
                     , containers
                     , cl-automata
                     , criterion
                     , deepseq
                     , graphviz
                     , MonadRandom
                     , optparse-generic
                     , random
                     , text
                     , time
                     -- For the Control.Monad.Trans.Except module
                     , transformers >= 0.4

test-suite cl-automata-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall

  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , hspec-discover
                     , QuickCheck
                     , cl-automata
                     , containers
                     , equivalence
                     , parsec >= 3 && < 4
                     , text
                     , transformers

  other-modules:       Algorithm.AutomataMergeSpec
                     , Algorithm.DfaEquivalenceSpec
                     , Algorithm.NfaEquivalenceSpec
                     , Algorithm.Regex.DerivationSpec
                     , Compiler.HkntSpec
                     , Compiler.RegexSpec
                     , Data.DfaSpec
                     , Data.EpsilonNfaSpec
                     , Data.EpsilonNfa.InternalSpec
                     , Data.NfaSpec
                     , Data.EquivalenceSpec
                     , Data.CongruenceClosureSpec
                     , HkntSamples
                     , Language.Automata.HkntParserSpec
                     , Language.Automata.HkntParser.InternalSpec
                     , Language.Automata.HkntParser.TokeniserSpec
                     , Language.RegexParserSpec
                     , Language.RegexParser.InternalSpec
                     , Language.RegexParser.TokeniserSpec

source-repository head
  type:     git
  location: https://github.com/koflerdavid/nfa-equivalence-code
