name:                cl-automata
version:             2.0.0.0
synopsis:            A collection of more or less efficient algorithms for simplifying finite automata and proving their equivalence.
description:         Please see README.md
homepage:            https://github.com/koflerdavid/nfa-equivalence-code#readme
license:             BSD3
license-file:        LICENSE
author:              David Kofler
maintainer:          D.Kofler@student.uibk.ac.at
copyright:           2016 David Kofler
category:            Algorithms
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.22

library
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

  hs-source-dirs:      src
  exposed-modules:     Algorithm.AutomataMerge
                     , Algorithm.DfaEquivalence
                     , Algorithm.NfaEquivalence
                     , Compiler.Hknt
                     , Data.Dfa
                     , Data.EpsilonNfa
                     , Data.EpsilonNfa.Internal
                     , Data.FiniteAutomaton
                     , Data.Nfa
                     , Language.Automata.HkntParser
                     , Language.Automata.HkntParser.Class
                     , Language.Automata.HkntParser.Internal
                     , Language.Automata.HkntParser.Tokeniser

  build-depends:       base               >= 4.7 && < 5
                     , bimap
                     , cl-data-structures >= 2.0
                     -- For Data.Map.!?
                     , containers         >= 0.5.9.1
                     , equivalence
                     , lucid
                     , parsec             >= 3 && < 4
                     , text
                     , transformers

test-suite cl-automata-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall

  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       base           >= 4.7 && < 5
                     , hspec
                     , hspec-discover
                     , QuickCheck
                     , cl-automata    >= 2.0
                     , containers
                     , equivalence
                     , parsec         >= 3 && < 4
                     , text
                     , transformers

  other-modules:       Algorithm.AutomataMergeSpec
                     , Algorithm.DfaEquivalenceSpec
                     , Algorithm.NfaEquivalenceSpec
                     , Compiler.HkntSpec
                     , Data.DfaSpec
                     , Data.EpsilonNfaSpec
                     , Data.EpsilonNfa.InternalSpec
                     , Data.NfaSpec
                     , HkntSamples
                     , Language.Automata.HkntParserSpec
                     , Language.Automata.HkntParser.InternalSpec
                     , Language.Automata.HkntParser.TokeniserSpec

source-repository head
  type:     git
  location: https://github.com/koflerdavid/nfa-equivalence-code
