name:               cl-automata
version:            2.1.0.0
synopsis:           A collection of more or less efficient algorithms for simplifying finite automata and proving their equivalence.
description:        Please see README.md
homepage:           https://github.com/koflerdavid/nfa-equivalence-code#readme
bug-reports:        https://github.com/koflerdavid/nfa-equivalence-code/issues
license:            BSD3
license-file:       LICENSE
author:             David Kofler
maintainer:         D.Kofler@student.uibk.ac.at
copyright:          2016-2018 David Kofler
category:           Algorithms
build-type:         Simple
cabal-version:      >= 2

library
  default-language:   Haskell2010
  ghc-options:        -Wall -Wcompat -Werror
                      -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints

  hs-source-dirs:     src
  exposed-modules:    Algorithm.AutomataMerge
                    , Algorithm.DfaEquivalence
                    , Algorithm.NfaEquivalence
                    , Compiler.Hknt
                    , Data.Dfa
                    , Data.Dfa.Builder
                    , Data.Dfa.Internal
                    , Data.EpsilonNfa
                    , Data.EpsilonNfa.Internal
                    , Data.FiniteAutomaton
                    , Data.Nfa
                    , Language.Automata.HkntParser
                    , Language.Automata.HkntParser.Class
                    , Language.Automata.HkntParser.Internal
                    , Language.Automata.HkntParser.Tokeniser

-- base-4.8 is required for Bifunctors
  build-depends:      base               >= 4.8 && < 5
                    , bimap
                    , cl-data-structures >= 2.0
                    -- For Data.Map.!?
                    , containers         >= 0.5.9.1
                    , equivalence
                    , parsec             >= 3 && < 4
                    , text
                    , transformers

test-suite cl-automata-test
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
                      -Wall -Wcompat -Werror
                      -Wincomplete-record-updates -Wredundant-constraints

  hs-source-dirs:     test
  main-is:            Driver.hs

  build-depends:      base             >= 4.8 && < 5
                    , hspec
                    , cl-automata
                    , containers
                    , parsec           >= 3 && < 4
                    , QuickCheck
                    , tasty
                    , tasty-discover
                    , tasty-hspec
                    , tasty-quickcheck
                    , test-invariant
                    , text
                    , transformers

  other-modules:      Algorithm.AutomataMergeSpec
                    , Algorithm.DfaEquivalenceSpec
                    , Algorithm.NfaEquivalenceSpec
                    , Compiler.HkntSpec
                    , Data.DfaSpec
                    , Data.Dfa.BuilderTest
                    , Data.Dfa.Test
                    , Data.EpsilonNfaSpec
                    , Data.EpsilonNfa.InternalSpec
                    , Data.NfaSpec
                    , HkntSamples
                    , Language.Automata.HkntParserSpec
                    , Language.Automata.HkntParser.InternalSpec
                    , Language.Automata.HkntParser.TokeniserSpec

source-repository this
  type:             git
  location:         https://github.com/koflerdavid/nfa-equivalence-code
  tag:              v2.0
  subdir:           cl-automata

source-repository head
  type:             git
  location:         https://github.com/koflerdavid/nfa-equivalence-code
  subdir:           cl-automata
